--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "FFmpeg"]
 	path = FFmpeg
-	url = https://github.com/hedonhermdev/FFmpeg
+	url = git@github.com:/hedonhermdev/FFmpeg
 [submodule "sxfi"]
 	path = sxfi
 	url = git@github.com:/mars-research/sxfi
@@ -9,3 +9,7 @@
 	path = llvm-project-13.x
 	url = https://github.com/mars-research/llvm-project-13.x
     branch = release/13.x
+[submodule "user-trampoline"]
+	path = user-trampoline
+	url = git@github.com:mars-research/user-trampoline.git
+    branch = SFI_loader
